Fix spacing

--- a/style.css
+++ b/style.css
@@ -81,11 +81,11 @@ h1 {
 }
 
 #skills, #hobbies, #education, #projects, #achievements {
-    margin-top: 350px;
+    margin-top: 150px;
 }
 
 #profile {
-    margin-top: 250px;
+    margin-top: 200px;
     display: flex;
     justify-content: center;
     background-color: #241643;
